Removed overflow attribute as it seems to cause some issues.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.Responsive.css
@@ -6,7 +6,6 @@
 
     body, html {
         font-size: 1em;
-        overflow-x: hidden;
     }
 
     .ArticleBody {
